Improve overflow/underflow DOM event handling. b=365477 r+sr=roc